# cardboard-box

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  eidolons.yaml  release-please-config.json
.claude/: settings.json
.claude/agents/: atlas.md  forge.md  idg.md  kupo.md  spectra.md  vigil.md  vivi.md
.claude/skills/atlas-abstract/: SKILL.md
.claude/skills/atlas-locate/: SKILL.md
.claude/skills/atlas-rescout/: SKILL.md
.claude/skills/atlas-scatter/: SKILL.md
.claude/skills/atlas-synthesize/: SKILL.md
.claude/skills/atlas-traverse/: SKILL.md
.claude/skills/forge-deliberation/: SKILL.md
.claude/skills/forge-framing/: SKILL.md
.claude/skills/forge-verify-incoming/: SKILL.md
.claude/skills/idg-composition/: SKILL.md
.claude/skills/idg-verify-incoming/: SKILL.md
.claude/skills/kupo-patch-verify/: SKILL.md
.claude/skills/kupo-verify-incoming/: SKILL.md
.codex/: config.toml
.devcontainer/: Dockerfile
.eidolons/.vigil/: config.yml
.eidolons/atlas/: SPEC.md  agent.md  install.manifest.json
.eidolons/forge/: SPEC.md  agent.md  install.manifest.json
.eidolons/harness/: manifest.json
.eidolons/idg/: SPEC.md  agent.md  install.manifest.json
.eidolons/kupo/: SPEC.md  agent.md  install.manifest.json
.eidolons/memories/: vigil-failures.yaml
.eidolons/spectra/: SPEC.md  agent.md  install.manifest.json
.eidolons/vigil/: SPEC.md  agent.md  install.manifest.json
.eidolons/vivi/: SPEC.md  agent.md  install.manifest.json
.githooks/: pre-push
.github/workflows/: ci.yml  pr-title.yml  release.yml
.spectra/plans/: 2026-06-16-cbox-v1.0-cli-lifecycle.md  2026-06-16-v2.0-provisioning.md  2026-06-16-v2.0-provisioning.yaml  2026-06-17-v3.0-tui.md  2026-06-19-tui-bundle1-retro-cockpit.md  2026-06-19-tui-bundle1-retro-cockpit.yaml  2026-06-19-tui-theme-personality.md  2026-06-19-tui-theme-personality.md.envelope.json  2026-06-19-tui-theme-personality.yaml  2026-06-19-v5.0-native-secrets.md  2026-06-19-v5.0-native-secrets.md.envelope.json  2026-06-19-v5.0-native-secrets.yaml  2026-06-20-tui-bundle2-living-box.md  2026-06-20-tui-bundle2-living-box.md.envelope.json  2026-06-20-tui-bundle2-living-box.yaml  2026-06-20-tui-bundle3-glass-cockpit.md  2026-06-20-tui-bundle3-glass-cockpit.md.envelope.json  2026-06-20-tui-bundle3-glass-cockpit.yaml  2026-06-21-v6.0-export.md  2026-06-21-v6.0-export.yaml  2026-06-23-enter-home-and-isolated-box.spec.md
.spectra/state/: 2026-06-16-v2.0-provisioning.state.json
docs/specs/: v1.0-cli-lifecycle.md  v4.0-release-pipeline.md  v6.0-export.md
src/: error.rs  lib.rs  main.rs
src/boxfile/: distro_family.rs  docker_mode.rs  mod.rs  model.rs  validate.rs
src/cli/: apply.rs  create.rs  doctor.rs  edit.rs  enter.rs  export.rs  inspect.rs  list.rs  mod.rs  output.rs  rm.rs  secret.rs  stop.rs  tui_cmd.rs  up.rs
src/core/: diff.rs  mod.rs  provision.rs  secret_inject.rs  spec.rs  state_store.rs
src/dbox/: argv.rs  backend.rs  mock.rs  mod.rs  real.rs  runner.rs
src/secret/: keyring_store.rs  mock.rs  mod.rs
src/tui/: action.rs  app.rs  bulk.rs  cmdlog.rs  effect.rs  filter.rs  history.rs  keymap.rs  logstream.rs  message.rs  mod.rs  model.rs  poll.rs  strings.rs  theme.rs  update.rs  view.rs
tests/: apply.rs  argv_builder.rs  create.rs  cwd_boxfile.rs  diff.rs  doctor.rs  edit.rs  enter.rs  export.rs  inspect.rs  isolation.rs  list.rs  provision.rs  rm.rs  secret.rs  secret_diff.rs  secret_doctor.rs  secret_inject.rs  secret_inspect.rs  secret_up_apply.rs  secret_validate.rs  smoke.rs  stop.rs  tui_bundle1.rs  tui_bundle2.rs  tui_bundle3.rs  tui_effects.rs  tui_entry.rs  tui_keymap.rs  tui_smoke.rs  tui_theme.rs  tui_update.rs  up.rs
(+87 files in other folders)
