[package]
name = "cbox"
version = "0.5.1"
edition = "2021"
description = "A distrobox manager"
license = "MIT"

[[bin]]
name = "cbox"
path = "src/main.rs"

[lib]
name = "cbox"
path = "src/lib.rs"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
testkit = []

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
sha2 = "0.10"
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true        # strip symbols from release binary — smaller tarballs; works for ARM cross-builds
